c4prj2_input/grade.txt
Grading at Thu Mar 11 17:25:46 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c:22:1: error: expected identifier or ‘(’ before ‘}’ token
 }
 ^
Compilation of future.c failed

Overall Grade: F
